<resources>
    <string name="notification_channel_name">@string/app_name</string>
    <string name="error">Error</string>
    <string name="unexpected_error">Unexpected error has occurred. Please contact support team</string>
    <string name="could_not_register_account">Could not register account. Please try again later.</string>
    <string name="how_you_use_fb">How you use Facebook.</string>
    <string name="how_fb_use_you">How Facebook uses you.</string>
    <string name="get_started_arrow">Get started »</string>
    <string name="i_already_have_an_account_arrow">I already have an account »</string>
    <string name="how_it_works">How it works</string>
    <string name="we_will_back_up_your_fb_data">We’ll back up your Facebook data.</string>
    <string name="we_will_show_how_you_use_fb">We’ll show how you use Facebook and how they use you.</string>
    <string name="we_will_give_you_a_way">We’ll give you ways to use your data for good (Future).</string>
    <string name="your_vault_will_be_updated">Your vault will be updated each week with new Facebook data and insights.</string>
    <string name="continue_arrow">Continue »</string>
    <string name="get_your_data">Get your data</string>
    <string name="fb_login">Facebook login</string>
    <string name="fb_password">Facebook password</string>
    <string name="we_will_only_use_your_fb_login">We’ll only use your Facebook login information to automate your back up.\n\nYour login is stored on your device, never in the Cloud.</string>
    <string name="data_requested">Data requested</string>
    <string name="notify_me_arrow">Notify me »</string>
    <string name="no_thanks">No thanks</string>
    <string name="enable">Enable</string>
    <string name="authorize_arrow">Authorize »</string>
    <string name="spring">Spring</string>
    <string name="usage">USAGE</string>
    <string name="insights">INSIGHTS</string>
    <string name="account">ACCOUNT</string>
    <string name="security">Security</string>
    <string name="sign_out_arrow">Sign out »</string>
    <string name="biometric_auth_arrow">Biometric Authentication »</string>
    <string name="recovery_key_arrow">Recovery key »</string>
    <string name="support">Support</string>
    <string name="about_arrow">About »</string>
    <string name="faq_arrow">FAQ »</string>
    <string name="faq">FAQ</string>
    <string name="unlink_account">Unlink Account</string>
    <string name="unlink_account_arrow">Unlink Account »</string>
    <string name="if_you_unlink_your_account">When you sign out, you will need your 12-word recovery key to access your data on this device again.\n\nTo ensure you have your recovery key recorded correctly, you will be asked to enter it again before you can sign out. If you haven’t already written down your recovery key, please do so now.</string>
    <string name="enter_your_12_words">Enter your 12-word recovery key above.</string>
    <string name="biometric_auth">Biometric</string>
    <string name="enable_biometric_authentication">Enable Biometric Authentication to secure your Spring data and account:</string>
    <string name="enable_biometric_auth">Enable Biometric Authentication</string>
    <string name="do_you_want_to_allow_to_use_biometric_auth">Do want to allow “Spring” to use Biometric Authentication?</string>
    <string name="app_will_use_biometric">Spring will use Biometric Authentication to secure your account and data.</string>
    <string name="recovery_key">Recovery Key</string>
    <string name="your_recovery_key_allow_you">Your recovery key allows you to fully recover your Spring account even if your device is lost or damaged. It is the only way to recover your account (Spring does not have access to your recovery key or store it anywhere for you). \n\nPlease make sure you are in a safe location then write down your recovery key on a piece of paper and keep it safe.</string>
    <string name="write_down_recovery_key_arrow">Write Down Recovery Key »</string>
    <string name="write_down_the_following_word">Write down the following words in order:</string>
    <string name="about">About</string>
    <string name="just_remind_you">Just reminding you to check if your Facebook archive is ready. Tap to continue.</string>
    <string name="fb_may_take_a_few_days">Facebook may take a few days to prepare your data archive, depending on how much data you have. \n\nWould you like us to remind you to check back here? If not, you will need to remember on your own to check if your backup is ready.</string>
    <string name="check_now_arrow">Check now »</string>
    <string name="still_waiting">Still Waiting</string>
    <string name="processing_data">Processing Data</string>
    <string name="your_fb_data_archive_has_been_successfully">Your Facebook data archive has been successfully secured. We’ve started processing your data and will send you a notification when it’s ready.</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="decade">Decade</string>
    <string name="last_week">Last week</string>
    <string name="this_week">This Week</string>
    <string name="this_year">This Year</string>
    <string name="this_decade">This Decade</string>
    <string name="posts">Posts</string>
    <string name="reactions">Reactions</string>
    <string name="you_made">You made</string>
    <string name="you_gave">You gave</string>
    <string name="updates">Updates</string>
    <string name="photos_videos">Photos &amp; Videos</string>
    <string name="stories">Stories</string>
    <string name="links">Links</string>
    <string name="like">Like</string>
    <string name="love">Love</string>
    <string name="wow">Wow</string>
    <string name="haha">Haha</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="you_reacted">You reacted</string>
    <string name="you_reacted_to">You reacted to</string>
    <string name="empty" />
    <string name="by_type">By type</string>
    <string name="by_day">By day</string>
    <string name="by_month">By month</string>
    <string name="by_year">By year</string>
    <string name="by_friends_tagged">By friends tagged</string>
    <string name="by_place_tagged">By place tagged</string>
    <string name="by_friend">By friend</string>
    <string name="trust_is_critical">Trust is critical</string>
    <string name="spring_is_from_bitmark">Spring is from Bitmark, creators of the Bitmark Protocol, an end-to-end Internet protocol for securing data provenance and restoring trust in data. We see SPRING as the first step in a movement to restore trust in data and help fix the Internet. We believe that our personal data can be used for so much more than selling us out to advertisers. Personal data can enrich and improve our lives in profound ways. SPRING is Bitmark’s first tool to help us all realize this vision.\n\n\nWant to learn more? Read our FAQ.</string>
    <string name="sincerely_colon">Sincerely,</string>
    <string name="sean_name_and_title">Sean Moss-Pultz \nCo-founder and CEO</string>
    <string name="passcode_pin_required">Device PIN setup is required</string>
    <string name="fingerprint_required">Biometric authentication setup is required</string>
    <string name="your_authorization_is_required">Your authorization is required.</string>
    <string name="your_account_has_been_unlinked">Your account has been completely unlinked from this device.</string>
    <string name="automating_please_wait">Automating…\nplease wait.</string>
    <string name="your_help_is_required">Your help is required</string>
    <string name="others">Others</string>
    <string name="no_activity_for_this_period">No activity for this period.</string>
    <string name="your_mood">Your Mood</string>
    <string name="sentiment_analysis_of_your_post">sentiment analysis of your posts</string>
    <string name="period_average">Period Average</string>
    <string name="happy">Happy</string>
    <string name="unhappy">Unhappy</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="sorry_no_data">Sorry, no data available!</string>
    <string name="tell_us_your_thoughts_arrow">Tell us your thoughts »</string>
    <string name="last_year">Last Year</string>
    <string name="last_decade">Last Decade</string>
    <string name="lens">LENS</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="we_are_making_a_simple_lens">We are making a simple lens builder and store. Like cooking recipes, people will be able to experiment, share, and sell lenses to get more utility from your data.</string>
    <string name="there_was_error_when_loading_statistic">There was an error when loading statistic for this period</string>
    <string name="notifications">Notifications</string>
    <string name="sign_in">Sign In</string>
    <string name="wrong_recovery_key">Wrong Recovery Key!</string>
    <string name="please_recheck_your_recovery_key">Please recheck your recovery key and tap to edit any incorrect words above.</string>
    <string name="submit_arrow">Submit »</string>
    <string name="could_not_sign_in">Could not sign in your account.\nPlease try again later.</string>
    <string name="we_are_waiting_for_fb">We’re waiting for Facebook to finish preparing your data archive. This may take up to a few days, depending on how much data you have.</string>
    <string name="sorry_fb_is_still_prepare">Sorry, Facebook is still preparing your data archive. This may take another day or two, depending on how much data you have.</string>
    <string name="you_requested_your_fb_archive">Facebook data requested:</string>
    <string name="update_now_arrow">Update now »</string>
    <string name="update_available">Update Available</string>
    <string name="a_new_version_is_available">The Spring app on your device is out of date. Please update Spring to continue using it.</string>
    <string name="your_fb_data_archive_is_being_processed_1">Your Facebook data archive is being processed. This might take 1–2 days. We can notify you when it’s done. Or you can check back on your own.</string>
    <string name="more_insights_is_coming">More insights coming!</string>
    <string name="view_insights">View insights »</string>
    <string name="fb_is_now_preparing">Facebook is now preparing your data archive. This may take up to a few days, depending on how much data you have.\n\nWhen you receive a notification from Facebook that your archive is ready, come back here. We’ll handle the rest.</string>
    <string name="request_your_fb_data"><![CDATA[<b>Step 1: Request your Facebook data</b><br><br> Go to https://fb.com/dyi and select “Download Your Information”. Make sure to select “JSON” for the format.<br><br><br><b>Step 2: Make your backup</b><br><br>Facebook will let you know when your data is ready for download. Typically, this takes 1–2 days.<br><br>When notified, store your zip file in the cloud or on this device. We recommend doing this on a fast Internet connection.<br><br>To continue:]]></string>
    <string name="add_zip_file_arrow">Add zip file »</string>
    <string name="add_cloud_storage">Add cloud storage URL</string>
    <string name="or">or</string>
    <string name="see_how_u_compare">See how you compare?</string>
    <string name="upload_your_fb_info_archive">Upload your Facebook Information Archive to receive your own private analytics. You will also be able to browse, search, and share your Facebook data.</string>
    <string name="view_progress_arrow">View progress »</string>
    <string name="option_1_automated"><![CDATA[<b>Option 1: Automated</b>]]></string>
    <string name="automate_now_arrow">Automate now »</string>
    <string name="get_your_fb_data">Get your Facebook data</string>
    <string name="upload_your_fb_info">Upload your Facebook Information Archive to browse, search, and share your Facebook data.</string>
</resources>