<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_18"
    android:paddingTop="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_18"
    android:paddingBottom="@dimen/dp_30">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/see_how_u_compare"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/upload_your_fb_info_archive"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvViewProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:text="@string/view_progress_arrow"
        android:textColor="@color/color_cognac_stateful"
        android:textSize="@dimen/sp_16" />

</LinearLayout>