<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_18"
    android:paddingTop="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_18"
    android:paddingBottom="@dimen/dp_30">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDataComingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/more_insights_is_coming" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDataComingSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:fontFamily="@font/grotesk_light_font_family"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        tools:text="@string/your_fb_data_archive_is_being_processed_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNotifyMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dp_22"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:text="@string/notify_me_arrow"
        android:textColor="@color/color_cognac_stateful"
        android:textSize="@dimen/sp_16" />

</LinearLayout>