<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/double_divider_white_black_stroke" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_18"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/get_your_fb_data"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginEnd="@dimen/dp_18"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/upload_your_fb_info"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_24"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:text="@string/get_started_arrow"
        android:textColor="@color/color_international_klein_blue_stateful"
        android:textSize="@dimen/sp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/double_divider_white_black_stroke" />


</LinearLayout>