<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_18"
        android:paddingEnd="@dimen/dp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.bitmark.fbm.util.view.TouchableOpacityAppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:scrollbars="vertical"
        android:text="@string/get_your_data"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:autoSizeMaxTextSize="@dimen/sp_36"
        app:autoSizeMinTextSize="@dimen/sp_24"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAutomate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_18"
        android:fontFamily="@font/grotesk_light_font_family"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/option_1_automated" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAutomate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_6"
        android:background="@drawable/bg_cognac_stateful"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/automate_now_arrow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toBottomOf="@id/tvAutomate" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_56"
        android:layout_marginBottom="@dimen/dp_18"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnAddZip"
        app:layout_constraintEnd_toEndOf="@id/btnAutomate"
        app:layout_constraintStart_toStartOf="@id/btnAutomate"
        app:layout_constraintTop_toBottomOf="@id/btnAutomate">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/grotesk_light_font_family"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            tools:text="@string/request_your_fb_data" />

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddZip"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_6"
        android:background="@drawable/bg_mercury_stateful"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/add_zip_file_arrow"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_6"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/etUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="44dp"
        android:background="@drawable/ic_rectangle"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:hint="@string/add_cloud_storage"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:inputType="textWebEmailAddress"
        android:paddingStart="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>