<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_3"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_14"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/data_requested"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tvMsg1"
        app:layout_constraintEnd_toEndOf="@id/btnCheckNow"
        app:layout_constraintStart_toStartOf="@id/btnCheckNow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsg1"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center_vertical"
        android:text="@string/fb_is_now_preparing"
        android:textColor="@color/black"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tvMsg2"
        app:layout_constraintEnd_toEndOf="@id/btnCheckNow"
        app:layout_constraintStart_toStartOf="@id/btnCheckNow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsg2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:autoSizeMaxTextSize="12sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/btnCheckNow"
        app:layout_constraintEnd_toEndOf="@id/btnCheckNow"
        app:layout_constraintStart_toStartOf="@id/btnCheckNow"
        tools:text="Facebook data requested: Dec 1 at 10:32 am." />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheckNow"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_2"
        android:background="@drawable/bg_cognac_stateful"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/check_now_arrow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@id/btnViewInsights" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewInsights"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="34dp"
        android:background="@color/white"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/view_insights"
        android:textAllCaps="false"
        android:textColor="@color/color_cognac_stateful"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>